# STM32CubeU5-V2-Preview

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.html  LICENSE.md  README.md  Release_Notes.html  Release_Notes.md  sbom_cdx.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback.yml
arch/cmsis/: CMakeLists.txt
arch/cmsis_dsp/: CMakeLists.txt
docs/: README.md
docs/breaking_concepts/: breaking_concepts_concept_A.rst  breaking_concepts_concept_B.rst  breaking_concepts_concept_C.rst  breaking_concepts_concept_E.rst  breaking_concepts_concept_F.rst  breaking_concepts_concept_G.rst  breaking_concepts_concept_I.rst  breaking_concepts_concept_J.rst  breaking_concepts_concept_L.rst  breaking_concepts_concept_M.rst  breaking_concepts_concept_N.rst  breaking_concepts_concept_O.rst  breaking_concepts_concept_P.rst  breaking_concepts_toc.rst
examples/: Getting_Started.md  README.md
examples/hal/gpio/exti/: LICENSE.md  (+2 more)
examples/hal/spi/full_duplex_two_boards_crc_com_it_controller/NUCLEO-U575ZI-Q/cmake/app/: CMakeLists.txt  CMakePresets.json
examples/templates/no_os/: README.html  README.md
part_drivers/button/: CMakeLists.txt  LICENSE.md  README.html  README.md  sbom_cdx.json
part_drivers/button/gpio/: button.c  button.h
part_drivers/led/: CMakeLists.txt  LICENSE.md  README.html  README.md  sbom_cdx.json
part_drivers/led/gpio/: led.h
part_drivers/led/mfxstm32l152/: led_mfx.c  led_mfx.h
part_drivers/led/pwm/: led_pwm.c  led_pwm.h
part_drivers/tcpp01/: CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.html  README.md  sbom_cdx.json  tcpp01.c  tcpp01.h
part_drivers/tcpp01/interfaces/adc_exti/: tcpp01_io.c  tcpp01_io.h
project_extractor/: .gitignore  LICENSE.html  README.md
project_extractor/resources/: mapping.strategy.json
stm32u5xx_dfp/: CMakeLists.txt  LICENSE.html  LICENSE.md  README.html  README.md  RTE_Components.h  Release_Notes.html  STMicroelectronics.stm32u5xx_dfp.extra-st  sbom_cdx.json
stm32u5xx_dfp/Flash/: STM32U59x_2M_0800.FLM  STM32U59x_2M_0C00.FLM  STM32U59x_4M_0800.FLM  STM32U59x_4M_0C00.FLM  STM32U5Fx_2M_0800.FLM  STM32U5Fx_4M_0C00.FLM  STM32U5xx_128K_0800.FLM  STM32U5xx_1M_0800.FLM  STM32U5xx_1M_0C00.FLM  STM32U5xx_256K_0800.FLM  STM32U5xx_2M_0800.FLM  STM32U5xx_2M_0C00.FLM  STM32U5xx_512K_0800.FLM  STM32U5xx_512K_0C00.FLM
stm32u5xx_dfp/Include/: partition_stm32u5xx.h  stm32u535xx.h  stm32u545xx.h  stm32u575xx.h  stm32u585xx.h  stm32u595xx.h  stm32u599xx.h  stm32u5a5xx.h  stm32u5a9xx.h  stm32u5f7xx.h  stm32u5f9xx.h  stm32u5g7xx.h  stm32u5g9xx.h  stm32u5xx.h  system_stm32u5xx.h
stm32u5xx_dfp/Include/Templates/: partition_stm32u535xx.h  partition_stm32u545xx.h  partition_stm32u575xx.h  partition_stm32u585xx.h  partition_stm32u595xx.h  partition_stm32u599xx.h  partition_stm32u5a5xx.h  partition_stm32u5a9xx.h  partition_stm32u5f7xx.h  partition_stm32u5f9xx.h  partition_stm32u5g7xx.h  partition_stm32u5g9xx.h  stm32_external_env.h
stm32u5xx_dfp/Source/: startup_stm32u535xx.c  startup_stm32u545xx.c  startup_stm32u595xx.c  startup_stm32u599xx.c  startup_stm32u5a5xx.c  startup_stm32u5a9xx.c  startup_stm32u5f7xx.c  startup_stm32u5f9xx.c  startup_stm32u5g7xx.c  startup_stm32u5g9xx.c
stm32u5xx_dfp/Source/Templates/: system_stm32u5xx.c  system_stm32u5xx_ns.c  system_stm32u5xx_s.c
stm32u5xx_drivers/: CMakeLists.txt  LICENSE.html  LICENSE.md  README.html  README.md  Release_Notes.html  Release_Notes.md  sbom_cdx.json
stm32u5xx_drivers/hal/: stm32_hal.h  stm32u5xx_dlyb_core.c  stm32u5xx_dlyb_core.h  stm32u5xx_fmc_core.c  stm32u5xx_fmc_core.h  stm32u5xx_hal.c  stm32u5xx_hal.h  stm32u5xx_hal_adc.c  stm32u5xx_hal_adc.h  stm32u5xx_hal_adf.c  stm32u5xx_hal_adf.h  stm32u5xx_hal_aes.c  stm32u5xx_hal_aes.h  stm32u5xx_hal_comp.c  stm32u5xx_hal_comp.h  stm32u5xx_hal_cordic.c  stm32u5xx_hal_cordic.h  stm32u5xx_hal_cortex.c  stm32u5xx_hal_cortex.h  stm32u5xx_hal_crc.c  stm32u5xx_hal_crc.h  stm32u5xx_hal_crs.c  stm32u5xx_hal_crs.h  stm32u5xx_hal_dac.c  stm32u5xx_hal_dac.h  stm32u5xx_hal_dbgmcu.c  stm32u5xx_hal_dbgmcu.h  stm32u5xx_hal_dcache.c  stm32u5xx_hal_dcache.h  stm32u5xx_hal_dcmi.c  stm32u5xx_hal_dcmi.h  stm32u5xx_hal_def.h  stm32u5xx_hal_dma.c  stm32u5xx_hal_dma.h  stm32u5xx_hal_dma2d.c  stm32u5xx_hal_dma2d.h  stm32u5xx_hal_dsi.c  stm32u5xx_hal_dsi.h  stm32u5xx_hal_exti.c  stm32u5xx_hal_exti.h  (+103 more)
stm32u5xx_drivers/ll/: stm32u5xx_ll_adc.h  stm32u5xx_ll_bus.h  stm32u5xx_ll_comp.h  stm32u5xx_ll_cordic.h  stm32u5xx_ll_crc.h  stm32u5xx_ll_crs.h  stm32u5xx_ll_dac.h  stm32u5xx_ll_dbgmcu.h  stm32u5xx_ll_dcache.h  stm32u5xx_ll_dma.h  stm32u5xx_ll_dma2d.h  stm32u5xx_ll_exti.h  stm32u5xx_ll_flash.h  stm32u5xx_ll_fmac.h  stm32u5xx_ll_gfxtim.h  stm32u5xx_ll_gpio.h  stm32u5xx_ll_gtzc.h  stm32u5xx_ll_i2c.h  stm32u5xx_ll_icache.h  stm32u5xx_ll_iwdg.h  stm32u5xx_ll_lpgpio.h  stm32u5xx_ll_lptim.h  stm32u5xx_ll_lpuart.h  stm32u5xx_ll_opamp.h  stm32u5xx_ll_pka.h  stm32u5xx_ll_pwr.h  stm32u5xx_ll_ramcfg.h  stm32u5xx_ll_rcc.h  stm32u5xx_ll_rng.h  stm32u5xx_ll_rtc.h  stm32u5xx_ll_spi.h  stm32u5xx_ll_syscfg.h  stm32u5xx_ll_system.h  stm32u5xx_ll_tamp.h  stm32u5xx_ll_tim.h  stm32u5xx_ll_tsc.h  stm32u5xx_ll_ucpd.h  stm32u5xx_ll_usart.h  stm32u5xx_ll_utils.h  stm32u5xx_ll_vrefbuf.h  (+1 more)
stm32u5xx_drivers/os_port/freertos/: stm32_hal_os.c  stm32_hal_os.h
stm32u5xx_drivers/os_port/no_os/: stm32_hal_os.c  stm32_hal_os.h
stm32u5xx_drivers/timebases/: stm32u5xx_hal_timebase_rtc_alarm.c  stm32u5xx_hal_timebase_rtc_wakeup.c  stm32u5xx_hal_timebase_tim.c
utilities/basic_stdio/: CMakeLists.txt  LICENSE.html  LICENSE.md  README.html  README.md  basic_stdio_core.c  basic_stdio_core.h  sbom_cdx.json
utilities/basic_stdio/interface_io/: basic_stdio_itf_io.h  basic_stdio_itfio_itm.c  basic_stdio_itfio_template.c  basic_stdio_itfio_uart.c
utilities/sequencer/: CMakeLists.txt  LICENSE.html  LICENSE.md  README.html  README.md  sbom_cdx.json  sequencer.c  sequencer.h
utilities/sequencer/template/: seq_user_conf_template.h
utilities/syscalls/: CMakeLists.txt  LICENSE.html  LICENSE.md  README.html  README.md  sbom_cdx.json  syscalls.c  sysmem.c
(+418 files in other folders)
